--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 section.board {
@@ -16,4 +17,30 @@ div {
     font-size: 8vmin;
     text-align: center;
     vertical-align: middle;
+}
+
+.board {
+    justify-content: center;
+}
+
+#reset {
+    height: 100px;
+    width: 300px;
+    background-color: grey;
+    font-size: large;
+    font-family: 'Press Start 2P', sans-serif;
+    border-radius: 50px;
+    
+}
+
+#resetDiv {
+    margin-top: 40px;
+    background-color: white;
+    border: none;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Press Start 2P', sans-serif;
 }
